--- a/package.json
+++ b/package.json
@@ -3,25 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@glif/filecoin-address": "^3.0.4",
+    "@mui/material": "^5.15.15",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@rainbow-me/rainbowkit": "^2.0.5",
+    "axios": "^1.6.8",
+    "cryptr": "^6.3.0",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.11.1",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-icons": "^5.0.1",
+    "react-random-avatars": "^1.3.1",
+    "react-select": "^5.8.0",
+    "socket.io": "^4.7.5",
+    "validator": "^13.11.0",
+    "wagmi": "^2.5.19"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
