--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.15",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@rainbow-me/rainbowkit": "^2.0.5",
+    "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
     "cryptr": "^6.3.0",
     "dotenv": "^16.4.5",
@@ -26,7 +27,9 @@
     "react-random-avatars": "^1.3.1",
     "react-select": "^5.8.0",
     "socket.io": "^4.7.5",
+    "swr": "^2.2.5",
     "validator": "^13.11.0",
+    "viem": "2.0.0",
     "wagmi": "^2.5.19"
   },
   "devDependencies": {
