--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@glif/filecoin-address": "^3.0.4",
     "@mui/material": "^5.15.15",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@pushprotocol/restapi": "^1.7.3",
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
@@ -22,11 +23,15 @@
     "ethers": "^6.11.1",
     "next": "14.1.4",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-random-avatars": "^1.3.1",
     "react-select": "^5.8.0",
+    "recharts": "^2.12.4",
     "socket.io": "^4.7.5",
+    "string-to-color": "^2.2.2",
     "swr": "^2.2.5",
     "validator": "^13.11.0",
     "viem": "2.0.0",
