--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "ethers": "^6.11.1",
     "next": "14.1.4",
+    "number-to-words": "^1.2.4",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
