--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@faker-js/faker": "^8.4.1",
     "@glif/filecoin-address": "^3.0.4",
     "@mui/material": "^5.15.15",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@pushprotocol/restapi": "^1.7.3",
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.29.0",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "axios": "^1.6.8",
     "cryptr": "^6.3.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "ethers": "^6.11.1",
     "next": "14.1.4",
     "number-to-words": "^1.2.4",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
@@ -42,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.11.9",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
