--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@faker-js/faker": "^8.4.1",
     "@glif/filecoin-address": "^3.0.4",
+    "@lighthouse-web3/sdk": "^0.3.2",
     "@mui/material": "^5.15.15",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@pushprotocol/restapi": "^1.7.3",
